# agent_bot

./: .gitignore  README.md  pyproject.toml
config/: config.py
src/: articles.py  json_encoder.py
src/agent/: main.py  prompts.py
src/aiopgsqldatabase/: database.py
src/articles/: articles.py  user.py
src/bot/: admin.py  articles.py  keyboards.py  main.py  my_filters.py
src/bot/admin/: admin.py  my_filters.py
src/bot/handler/: handler_commands.py  handler_messages.py  handler_strings.py
src/parser/: async_parser.py  main.py
src/pgsqldatabase/: database.py  json_encoder.py  queries.py
tests/agent_tests/: conftest.py  test.py
tests/articles_tests/: conftest.py  test.py
tests/database_tests/: conftest.py  test.py  tests.py
