[tool.poetry]
name = "agent_bot"
version = "0.1.0"
description = "Agent bot project"
authors = ["Victor Bratko <bratko.viktor2004@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
asyncpg = "^0.29.0"
google-generativeai = "^0.7.2"
openai = "^1.38.0"
langchain = "^0.2.12"
langchain-nvidia-ai-endpoints = "^0.2.0"
pytest = "^8.3.2"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"