[tool.poetry]
name = "agent_bot"
version = "0.1.0"
description = "Agent bot project"
authors = ["Victor Bratko <bratko.viktor2004@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
asyncpg = "^0.29.0"
google-generativeai = "^0.7.2"
langchain = "^0.2.12"
langchain-nvidia-ai-endpoints = "^0.2.0"
pytest = "^8.3.2"
langchain-google-vertexai = "^1.0.8"
termcolor = "^2.4.0"
pytest-asyncio = "^0.23.8"
pytest-timeout = "^2.3.1"
transformers = "^4.44.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"